Archive2/f1/aaf5f693c9487f/output
main.cpp: In function 'int main()':
main.cpp:6:7: error: 'class std::map<int, int>' has no member named 'emplace'
     m.emplace(1, 5);
       ^
