Archive2/f1/aaf5f693c9487f/main.cpp
#include <map>

int main()
{
    std::map<int, int> m;
    m.emplace(1, 5);
}